--- a/client/src/components/Overview/overview.module.css
+++ b/client/src/components/Overview/overview.module.css
@@ -1,16 +1,4 @@
 /* =======================
-      CSS Variables
-========================*/
-:root {
-  --black: #000000;
-  --blue: #1e90ff;
-  --charcoal: #2e2e2ec4;
-  --red: #ff0000;
-  --silver: #c0c0c0;
-  --white: #ffffff;
-}
-
-/* =======================
         Clearfix
 ========================*/
 /* html, body, div, span, applet, object, iframe,
@@ -56,7 +44,6 @@ img {
 
 .hidden {
   visibility: hidden;
-  transform: scale(0.33);
 }
 
 .border {
@@ -115,7 +102,7 @@ h2.header {
   display: table;
   position: relative;
   grid-column: 1 / span 2;
-  width: auto;
+  width: 100%;
 }
 
 .overview__image {
@@ -131,17 +118,6 @@ h2.header {
 
   grid-column-start: 1;
   grid-row: 2 / span 5;
-}
-
-.overview__image-landscape {
-  min-height: 550px;
-  object-fit: cover;
-}
-
-.overview__image-portrait {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
 }
 
 .overview__product-features {
@@ -175,7 +151,6 @@ h2.product-details__name {
   margin: 16px 0;
 }
 
-
 .product-info__sale-price {
   color: var(--red);
 }
@@ -207,10 +182,12 @@ Convert scrollbar to ⏮ arrows ⏭
 
 .styles__carousel {
   position: absolute;
+
   left: 16px;
   top: 16px;
   width: 90px;
-  height: 480px;
+  height: 90%;
+  max-height: 480px;
   overflow-x: hidden;
   overflow-y: scroll;
   z-index: 2;
@@ -304,14 +281,14 @@ Convert scrollbar to ⏮ arrows ⏭
   padding-left: 12px;
 }
 
-.button:active {
-  box-shadow: inset 3px 3px 5px 6px #ccc;;
-}
-
 .modal-button {
+  position: absolute;
+  top: 16px;
+  left: 91%;
+  border-radius: 15%;
   margin-left: 8px;
   background-color: var(--white);
-  top: 0;
+  opacity: .7;
   min-width: 40px;
 }
 
@@ -322,51 +299,53 @@ Convert scrollbar to ⏮ arrows ⏭
 /* =======================
       Modal Styles
 ========================*/
-.images__modal {
-  height: 0;
-  box-shadow: -2rem 2rem 2rem rgba(black, 0.2);
-
-  filter: blur(0);
-  transition: 1.1s ease-in-out;
-  transform: scale(0.5);
-  opacity: 1;
-
-  visibility: visible;
-  position: fixed;
-  z-index: 5;
-}
-
 .modal-hidden {
   height: 0;
   opacity: 0;
   filter: blur(8px);
   box-shadow: 1rem 0 0 rgba(black, 0.2);
   visibility: hidden;
-  transition: 1.1s ease-out;
 }
 
-/* .modal__content {
-  object-fit: cover;
-  height: 1400px;
+.images__modal {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-}   */
+  height: 100%;
+  background-color: var(--lt-black);
+
+  filter: blur(0);
+
+  opacity: 1;
+  z-index: 5;
+}
 
 .modal__content {
   object-fit: cover;
-  height: 100%;
-  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: 80%;
+  max-width: 1000px;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  margin: 0 auto;
 }
 
-.test {
-  position: absolute;
+.modal__content,
+.modal-hidden {
+  transition: 1.15s ease-out;
+}
+
+.overview__image-landscape {
+  min-height: 550px;
+  object-fit: cover;
+}
+
+.overview__image-portrait {
   width: 100%;
-  top: 0;
-  left: 0;
-
-  filter: blur(0);
-  transform: scale(1.5);
-  opacity: 1;
-
-  transform: translate(40%, 10%);
-  z-index: 5;
+  height: auto;
+  object-fit: contain;
 }
